fix: fixed some spacing

--- a/src/components/Sponsorship.css
+++ b/src/components/Sponsorship.css
@@ -32,7 +32,7 @@
     linear-gradient(to bottom, 
       rgba(0,0,0,1) 0%, 
       rgba(0,0,0,0.6) 25%, 
-      rgba(0,0,0,0.2) 30%, 
+      rgba(0,0,0,0.2) 40%, 
       rgba(0,0,0,0.2) 70%, 
       rgba(0,0,0,0.6) 90%, 
       rgba(0,0,0,1) 100%
